Clear email user and password in .env
Removed sensitive email credentials from .env file.

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGODB_CONNECTION_STRING=mongodb://localhost:27017/craft_digital_hub
 HOST=localhost
 PORT=3000
-EMAIL_USER = creatortechniques6@gmail.com
-EMAIL_PASS = hcbk fgfw inkl cyyn
+EMAIL_USER = 
+EMAIL_PASS = 
